k8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-svc
spec:
  ports:
    - port: 8095 # Port accessible inside cluster
      protocol: TCP
      targetPort: 80 # Port to forward to inside the pod
  selector:
    app: nginx
  type: ClusterIP
status:
  loadBalancer: {}
