k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/group.name: lb-group # allows to create 1 ALB for multiple ingress resources in any namespace
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0e6e191a6b126e7aa, subnet-06d0b590fe0941cdc  #TODO: set public subnets here
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:228305238849:certificate/3c0ee931-ac88-4cd4-904f-8662e5ba18c0" #TODO: set cert here
    # Health Check Settings
#    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
#    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
#    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
#    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
#    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
#    alb.ingress.kubernetes.io/success-codes: '200'
#    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
#    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
    - host: devapi.niks.cloud # Gonna be overwritten with an actual domain name in overlay
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-svc
                port:
                  number: 8095
